+enableTreePersisitData - save tree state (expanded labels, acive label)

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -343,6 +343,9 @@
   "options_enablePageAction": {
     "message": "Enable 'Read Later' button in the browser address bar"
   },
+  "options_enableTreePersisitData": {
+    "message": "Remember Expanded Labels"
+  },
 
   "contextMenuAddBookmark": {
     "message": "Add Page to Google Bookmarks"
