--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -345,13 +345,14 @@
     "message": "Запоминать раскрытые метки"
   },
   "options_fsOpenContextIn_legend": {
-    "message": "Открывать форму добавления закладки из контекстного меню страницы/ссылки в"
+    "message": "Открывать форму добавления закладки из контекстного меню страницы(ссылки) в"
   },
-  "options_lblOpenContextIn_popup" {
-    "message": "всплывающее окно"
+  "options_lblOpenContextIn_popup" : {
+    "message" : "всплывающее окно"
   },
-  "options_lblOpenContextIn_sidebar" {
-    "message": "боковая панель"
+
+  "options_lblOpenContextIn_sidebar" : {
+    "message" : "боковая панель"
   },
 
 
